Fixed last issues

--- a/campaign.html
+++ b/campaign.html
@@ -15,66 +15,62 @@
 <meta name="description" content="Divine Spice- hair and body care products">
 </head>
 
+
 <body>
     <!--Navigation-->
     <div class="wrapper">
-        <nav>
-            <input type="checkbox" id="show-search">
-            <input type="checkbox" id="show-menu">
-            <label for="show-menu" class="menu-icon"><i class="fas fa-bars"></i></label>
-            <div class="content">
-                <div class="logo"><a href="index.html">Divine Spice</a></div>
-                <ul class="links">
-                    <li><a href="index.html" class="desktop-link-1">Home</a></li>
-                    <li>
-                        <a href="#" class="desktop-link">Products</a>
-                        <input type="checkbox" id="show-products">
-                        <label for="show-products">Products</label>
-                        <ul class="roll-out-nav">
-                            <li><a href="hair.html">Hair</a></li>
-                            <li><a href="body.html">Body</a></li>
-                            <li><a href="deodorant.html">Deodorant</a></li>
-                            <li><a href="#">Bestsellers</a></li>
-                            <li><a href="#">Sales</a></li>
-                            <li><a href="#">Editions</a></li>
-                            <li><a href="#">Gift ideas</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="https://oldspice.com/" class="desktop-link-1" >Men</a></li>
-                    <li>
-                        <a href="#" class="desktop-link">Campaigns</a>
-                        <input type="checkbox" id="show-campaigns">
-                        <label for="show-campaigns">Campaigns</label>
-                        <ul class="roll-out-nav">
-                            <li><a href="#">Female body hair</a></li>
-                            <li><a href="#">Female self-esteem</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#" class="desktop-link-1">MyDivineSpice</a></li>
-                    <li>
-                        <a href="#" class="desktop-link">About us</a>
-                        <input type="checkbox" id="show-about-us">
-                        <label for="show-about-us">About us</label>
-                        <ul class="roll-out-nav">
-                            <li>
-                                <a href="#" class="desktop-link">Divine Spice</a>
-                                <input type="checkbox" id="show-divine-spice">
-                                <label for="show-divine-spice">Divine Spice</label>
-                         
-                            </li>
-                            <li><a href="#">Sustainability</a></li>
-                            <li><a href="#">History</a></li>
-                            <li><a href="#">News</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-            <label for="show-search" class="search-icon"><i class="fas fa-search"></i></label>
-            <form action="#" class="search-box">
-                <input type="text" placeholder="Type Something to Search..." required>
-                <button type="submit" class="go-icon"><i class="fas fa-long-arrow-alt-right"></i></button>
-            </form>
-        </nav>
+      <nav>
+        <input type="checkbox" id="show-search">
+        <input type="checkbox" id="show-menu">
+        <label for="show-menu" class="menu-icon"><i class="fas fa-bars"></i></label>
+        <div class="content">
+          <div class="logo"><a href="index.html">Divine Spice</a></div>
+          <ul class="links">
+            <li><a href="index.html" class="desktop-link-1">Home</a></li>
+            <li>
+              <a href="#" class="desktop-link">Products</a>
+              <input type="checkbox" id="show-products">
+              <label for="show-products">Products</label>
+              <ul class="roll-out-nav">
+                <li><a href="hair.html">Hair</a></li>
+                <li><a href="body.html">Body</a></li>
+                <li><a href="deodorant.html">Deodorant</a></li>
+                <li><a href="#">Bestsellers</a></li>
+                <li><a href="#">Sales</a></li>
+                <li><a href="#">Editions</a></li>
+                <li><a href="#">Gift ideas</a></li>
+              </ul>
+            </li>
+            <li><a href="https://oldspice.com/" class="desktop-link-1">Men</a></li>
+            <li>
+              <a href="#" class="desktop-link">Campaigns</a>
+              <input type="checkbox" id="show-campaigns">
+              <label for="show-campaigns">Campaigns</label>
+              <ul class="roll-out-nav">
+                <li><a href="campaign.html">Female body hair</a></li>
+                <li><a href="#">Female self-esteem</a></li>
+              </ul>
+            </li>
+            <li><a href="#" class="desktop-link-1">MyDivineSpice</a></li>
+            <li>
+              <a href="#" class="desktop-link">About us</a>
+              <input type="checkbox" id="show-about-us">
+              <label for="show-about-us">About us</label>
+              <ul class="roll-out-nav">
+                <li><a href="#">Divine Spice</a></li>
+                <li><a href="#">Sustainability</a></li>
+                <li><a href="#">History</a></li>
+                <li><a href="#">News</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <label for="show-search" class="search-icon"><i class="fas fa-search"></i></label>
+        <form action="#" class="search-box">
+          <input type="text" placeholder="Type Something to Search..." required>
+          <button type="submit" class="go-icon"><i class="fas fa-long-arrow-alt-right"></i></button>
+        </form>
+      </nav>
     </div>
 <!--Heading-->
 
