--- a/deodorant.html
+++ b/deodorant.html
@@ -15,6 +15,7 @@
     <meta name="description" content="Divine Spice- hair and body care products">
 </head>
 
+
 <body>
     <!--Navigation-->
     <div class="wrapper">
@@ -56,12 +57,7 @@
                         <input type="checkbox" id="show-about-us">
                         <label for="show-about-us">About us</label>
                         <ul class="roll-out-nav">
-                            <li>
-                                <a href="#" class="desktop-link">Divine Spice</a>
-                                <input type="checkbox" id="show-divine-spice">
-                                <label for="show-divine-spice">Divine Spice</label>
-
-                            </li>
+                            <li><a href="#">Divine Spice</a></li>
                             <li><a href="#">Sustainability</a></li>
                             <li><a href="#">History</a></li>
                             <li><a href="#">News</a></li>
@@ -101,9 +97,10 @@
 
                     <p class="shampoo-title">Magnetic Deodorant</p>
                     <p class="price-title">18DKK</p>
-                    <a href="deodorant-product.html"><button type="button" class="shampoo-button">VIEW</button></a>
-                    <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
-          </div>
+                    <div class="buttons-product">
+                        <a href="deodorant-product.html"><button type="button" class="shampoo-button">VIEW</button></a>
+                        <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
+                    </div>
                 </div>
             </div>
 
@@ -115,9 +112,10 @@
 
                     <p class="shampoo-title">Refreshing Deodorant</p>
                     <p class="price-title">19DKK</p>
-                    <button type="button" class="shampoo-button">VIEW</button>
-                    <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
-          </div>
+                    <div class="buttons-product">
+                        <button type="button" class="shampoo-button">VIEW</button>
+                        <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
+                    </div>
                 </div>
             </div>
 
@@ -129,9 +127,10 @@
 
                     <p class="shampoo-title">Goddess Deodorant</p>
                     <p class="price-title">18DKK</p>
-                    <button type="button" class="shampoo-button">VIEW</button>
-                    <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
-          </div>
+                    <div class="buttons-product">
+                        <button type="button" class="shampoo-button">VIEW</button>
+                        <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
+                    </div>
                 </div>
             </div>
 
@@ -143,9 +142,10 @@
 
                     <p class="shampoo-title">Hers Deodorant</p>
                     <p class="price-title">20DKK</p>
-                    <button type="button" class="shampoo-button">VIEW</button>
-                    <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
-          </div>
+                    <div class="buttons-product">
+                        <button type="button" class="shampoo-button">VIEW</button>
+                        <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
+                    </div>
                 </div>
             </div>
 
@@ -157,9 +157,10 @@
 
                     <p class="shampoo-title">Relaxing Deodorant</p>
                     <p class="price-title">21DKK</p>
-                    <button type="button" class="shampoo-button">VIEW</button>
-                    <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
-          </div>
+                    <div class="buttons-product">
+                        <button type="button" class="shampoo-button">VIEW</button>
+                        <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
+                    </div>
                 </div>
             </div>
 
@@ -171,9 +172,10 @@
 
                     <p class="shampoo-title">Pure Deodorant</p>
                     <p class="price-title">19DKK</p>
-                    <button type="button" class="shampoo-button">VIEW</button>
-                    <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
-          </div>
+                    <div class="buttons-product">
+                        <button type="button" class="shampoo-button">VIEW</button>
+                        <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
+                    </div>
                 </div>
             </div>
 
@@ -185,9 +187,10 @@
 
                     <p class="shampoo-title">Vibrant Deodorant</p>
                     <p class="price-title">20DKK</p>
-                    <button type="button" class="shampoo-button">VIEW</button>
-                    <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
-          </div>
+                    <div class="buttons-product">
+                        <button type="button" class="shampoo-button">VIEW</button>
+                        <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
+                    </div>
                 </div>
             </div>
 
@@ -199,9 +202,10 @@
 
                     <p class="shampoo-title">Strong Deodorant</p>
                     <p class="price-title">18DKK</p>
-                    <button type="button" class="shampoo-button">VIEW</button>
-                    <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
-          </div>
+                    <div class="buttons-product">
+                        <button type="button" class="shampoo-button">VIEW</button>
+                        <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
+                    </div>
                 </div>
             </div>
 
@@ -209,12 +213,13 @@
                 <div class="card-top">
                     <img src="images/old-spice-product3.png" alt="product">
                 </div>
-
+                <div class="card-bottom">
                 <p class="shampoo-title">Spicy Deodorant</p>
                 <p class="price-title">19DKK</p>
-                <button type="button" class="shampoo-button">VIEW</button>
-                <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
-          </div>
+                <div class="buttons-product">
+                    <button type="button" class="shampoo-button">VIEW</button>
+                    <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
+                </div>
             </div>
         </div>
     </section>
