--- a/index.html
+++ b/index.html
@@ -56,12 +56,7 @@
             <input type="checkbox" id="show-about-us">
             <label for="show-about-us">About us</label>
             <ul class="roll-out-nav">
-              <li>
-                <a href="#" class="desktop-link">Divine Spice</a>
-                <input type="checkbox" id="show-divine-spice">
-                <label for="show-divine-spice">Divine Spice</label>
-
-              </li>
+              <li><a href="#">Divine Spice</a></li>
               <li><a href="#">Sustainability</a></li>
               <li><a href="#">History</a></li>
               <li><a href="#">News</a></li>
@@ -118,8 +113,8 @@
           <p class="shampoo-title">Cinamon Fresh</p>
           <p class="price-title">18DKK</p>
           <div class="buttons-product">
-          <a href="deodorant-product.html"><button type="button" class="shampoo-button">VIEW</button></a>
-          <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
+            <a href="deodorant-product.html"><button type="button" class="shampoo-button">VIEW</button></a>
+            <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
           </div>
         </div>
       </div>
@@ -132,8 +127,8 @@
           <p class="shampoo-title">Goddess Gel</p>
           <p class="price-title">20DKK</p>
           <div class="buttons-product">
-          <a href="body-product.html"><button type="button" class="shampoo-button">VIEW</button></a>
-          <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
+            <a href="body-product.html"><button type="button" class="shampoo-button">VIEW</button></a>
+            <a href="#" class="cart"><img src="images/bag-cart.svg" alt="cart"></a>
           </div>
         </div>
       </div>
